Adapt Tag Entry Removal to 1.20.1